# procgenAISC

./: .gitignore  README.md  environment.yml  setup.py
docs/: BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  DEPENDENCY_CLEANUP_COMPLETE.md  DOCUMENTATION_UPDATE_COMPLETE.md  GITIGNORE_STATUS.md  GYMNASIUM_MIGRATION.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  ORGANIZATION_SUMMARY.md  PYBIND11_MIGRATION_PLAN.md  README.md
procgen/: CMakeLists.txt  __init__.py  build.py  env.py  gym_registration.py  interactive.py  procgen_gymnasium_env.py  state_test.py
procgen/data/libenv/: libenv.h
procgen/examples/: random_agent_gym.py  random_agent_gym3.py
procgen/src/: procgen_bindings.cpp  resources.cpp  resources.h  vecgame.cpp
procgen/src/games/: treechop.cpp
tests/: README.md  test_gymnasium_render.py  test_gymnasium_simple.py  test_pybind11_migration.py  test_smoke.py  test_smoke_gymnasium_only.py  test_treechop_functional.py  test_treechop_minimal.py
